--- a/Devcplusplus/Makefile.win
+++ b/Devcplusplus/Makefile.win
@@ -1,29 +1,29 @@
 # Project: OpenGL
-# Makefile created by Dev-C++ 5.4.1
+# Makefile created by Dev-C++ 5.2.0.2
 
-CPP      = g++.exe
-CC       = gcc.exe
+CPP      = g++.exe -D__DEBUG__
+CC       = gcc.exe -D__DEBUG__
 WINDRES  = windres.exe
-OBJ      = main.o open.o
-LINKOBJ  = main.o open.o
-LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW32/lib" -static-libstdc++ -static-libgcc "../../../../../../../Program Files (x86)/Dev-Cpp/MinGW32/lib/libglu32.a" "../../../../../../../Program Files (x86)/Dev-Cpp/MinGW32/lib/libglut32.a" "../../../../../../../Program Files (x86)/Dev-Cpp/MinGW32/lib/libopengl32.a"  -g3
-INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW32/include"
-CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW32/include"
+OBJ      = main.o open.o $(RES)
+LINKOBJ  = main.o open.o $(RES)
+LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW32/lib" -static-libstdc++ -static-libgcc "../../../../../../../Program Files (x86)/Dev-Cpp/MinGW32/lib/libopengl32.a" "../../../../../../../Program Files (x86)/Dev-Cpp/MinGW32/lib/libglu32.a" "../../../../../../../Program Files (x86)/Dev-Cpp/MinGW32/lib/libglut32.a"  -g3 
+INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW32/include" 
+CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW32/include" 
 BIN      = OpenGL.exe
-CXXFLAGS = $(CXXINCS) -g3
-CFLAGS   = $(INCS) -g3
+CXXFLAGS = $(CXXINCS)   -g3
+CFLAGS   = $(INCS)   -g3
 RM       = rm -f
 
 .PHONY: all all-before all-after clean clean-custom
 
-all: all-before $(BIN) all-after
+all: all-before OpenGL.exe all-after
 
 
 clean: clean-custom
 	${RM} $(OBJ) $(BIN)
 
 $(BIN): $(OBJ)
-	$(CPP) $(LINKOBJ) -o $(BIN) $(LIBS)
+	$(CPP) $(LINKOBJ) -o "OpenGL.exe" $(LIBS)
 
 main.o: main.cpp
 	$(CPP) -c main.cpp -o main.o $(CXXFLAGS)
